# AGENTICAI

./: .gitignore  pyproject.toml
1-LangchainBasics/: QAchatbot.py  app.py  langchainbasics.ipynb
