[project]
name = "agenticai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "certifi>=2025.8.3",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-groq>=0.3.7",
    "langgraph>=0.6.6",
    "python-dotenv>=1.1.1",
    "streamlit>=1.49.1",
]
